--- a/menu-service.zip_expanded/menu-service/src/main/resources/application.properties
+++ b/menu-service.zip_expanded/menu-service/src/main/resources/application.properties
@@ -25,5 +25,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Eureka
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
+## This config help other service can get gRPC port from ServiceInstance
+eureka.instance.metadata-map.grpc.port = 9090
 # gRPC
 grpc.server.port = 9090
