--- a/order-service.zip_expanded/order-service/.gitattributes
+++ b/order-service.zip_expanded/order-service/.gitattributes
@@ -3,3 +3,9 @@
 
 # ignore dir Swagger UI
 swagger-ui/** linguist-vendored
+
+# ignore fir frontend (if exist)
+frontend/** linguist-vendored
+
+# ignore JavaScript file auto create
+*.js linguist-generated
